tests/source1/pass/expr_arithmetic_op5.js
1 / 0;
// expected: inf